--- a/macros.tex
+++ b/macros.tex
@@ -7,6 +7,8 @@
 \newcommand{\RTheta}{$R_{\Theta(\rvar)}$}
 \newcommand{\DeltaDptr}{\mbox{$\Delta\Dptr$}}
 \newcommand{\alphas}{$\alpha_s$}
+\newcommand{\qbar}{\bar{q}}
+
 
 \newcommand{\EM}{\mbox{\text{EM}}}
 \newcommand{\HI}{\mbox{\text{HI}}}
