--- a/qgp.tex
+++ b/qgp.tex
@@ -6,7 +6,8 @@ Heavy ion collisions can be used as a tool to study the Quark Gluon Plasma \cite
 \subsection{Heavy Ion Collisions}
 In a heavy ion collision, the colliding nuclei are accelerated to relativistic energies and are Lorentz contracted discs. In the case of a \pbpb\ collision the relativistic $\gamma$ factor is between 100 and 2500 for beam rapidities of $y = 5.3$ and 8.5. Each nucleus contains many colored quarks and antiquarks, with three more quarks than anti-quarks per nucleon, with the $q\bar{q}$ popping in and out of the vacuum due to quantum fluctuations. These $q\bar{q}$ pairs are sources of transverse color fields and the corresponding force carriers, the gluons. 
 
-When these pancake like discs collide, their color fields interact and there is a color charge exchange, producing longitudinal color fields that fill the space between the receding discs. While the maximum energy density in the process occurs just at the collision, the energy density 1 fm/c after the collision is 12 $\mathrm{GeV} / \mathrm{fm}^3$, much higher than the 500 $\mathrm{MeV} / \mathrm{fm}^3$ in a typical hadron. Lattice QCD calculations in thermodynamics show that at these energies, the partons produced in the collision cannot be treated as a collection of distinct hadrons. In fact, these partons are strongly coupled to each other and form a medium called the Quark Gluon Plasma (QGP) \cite{???}. 
+When these pancake like discs collide, their color fields interact and there is a color charge exchange, producing longitudinal color fields that fill the space between the receding discs. While the maximum energy density in the process occurs just at the collision, the energy density 1 fm/c after the collision is 12 $\mathrm{GeV} / \mathrm{fm}^3$, much higher than the 500 $\mathrm{MeV} / \mathrm{fm}^3$ in a typical hadron. Lattice QCD calculations in thermodynamics show that at these energies, the partons produced in the collision cannot be treated as a collection of distinct hadrons. 
+%In fact, these partons are strongly coupled to each other and form a medium called the Quark Gluon Plasma (QGP) \cite{???}. 
 
 %In a heavy ion collision, the experimenter can only tune the size of the colliding nuclei, and the energy that they are being collided at. There is no experimental control over the impact parameter or the structure functions that dictate the momentum distribution of nucleons within the nucleus. These have to be determined event by
 
@@ -22,7 +23,7 @@ After the collision the energy density between the receding nuclei starts to dec
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.85\textwidth]{figures/theory/qgp_formation}
-\caption{(left) Space-time diagram for a heavy ion collision. The color is indicative of the temperature of the QGP formed. (right) Snapshots of a heavy ion collision at $\sqrtsnn = 2.76$ TeV at different times. The Lorentz contracted nuclei are in blue while the QGP is in red. Figures from References \cite{7, 8}.  }
+\caption{(left) Space-time diagram for a heavy ion collision. The color is indicative of the temperature of the QGP formed. (right) Snapshots of a heavy ion collision at $\sqrtsnn = 2.76$ TeV at different times. The Lorentz contracted nuclei are in blue while the QGP is in red. Figure from Reference \cite{Busza:2018rrf}.  }
 \label{fig:qgp_form}
 \end{center}
 \end{figure}
@@ -128,8 +129,7 @@ The charged particle multiplicity $N_{\mathrm{ch}}$ along with the combination o
 
 \subsection{The Quark Gluon Plasma}
 \label{sec:qgp}
-Quarks and gluons are deconfined at extremely high energy and density conditions and form a state called the Quark Gluon Plasma \cite{SHURYAK198071}. These conditions are met in high energy heavy ion collisions. 
-The Quark Gluon Plasma has to be described in terms of its constituent quarks and gluons as opposed to the hadrons. This transition between confinement within hadrons and being free within the QGP occurs at very high temperatures and pressures. This can be seen in the QCD phase diagram shown in Figure~\ref{fig:qcd_phase}. 
+Extreme conditions of temperature and pressure like those in relativistic heavy ion collisions lead to the formation of the Quark Gluon Plasma \cite{SHURYAK198071}. It is believed to have filled the early universe a few microseconds after the Big Bang and might be present in the cores of extremely compact objects like neutron stars \cite{PhysRevLett.34.1353, Linde_1979}. The phase transition between the free quarks and gluons within the QGP and the confined quarks and gluons within hadrons can be seen in Figure~\ref{fig:qcd_phase}.  
 
 \begin{figure}[htbp]
 \begin{center}
@@ -139,12 +139,40 @@ The Quark Gluon Plasma has to be described in terms of its constituent quarks an
 \end{center}
 \end{figure}
 
-This state of matter exists above $\lambda_{\mathrm{QCD}} = 200$ MeV, the fundamental energy scale in QCD, and is believed to have filled the early universe a few microseconds after the Big Bang \cite{23, 24} and might be present in the cores of extremely compact objects like neutron stars. 
+This state of matter exists for 1-10 fm/c, depending on the collision energy, above $\lambda_{\mathrm{QCD}} = 200$ MeV, the fundamental energy scale in QCD. Thermal photons from the QGP reveal that it reaches temperatures of 300--600 MeV in central collisions at 200 GeV \cite{PhysRevLett.104.132301} and 2.76 TeV \cite{2016235}, showing very little collision energy dependence. Further, the chemical freeze-out temperature was found to be 160 MeV via measurements of ratios of final state hadrons containing the light $u, d$ quarks \cite{Fodor_2004, ADAMS2005102, PhysRevC.93.024917} with the thermal freeze-out being 100--150 MeV \cite{PhysRevC.69.024904, PhysRevC.72.014908, PhysRevC.75.024910, PhysRevC.88.044910}. These measurements paint a picture of the QGP being formed early in the heavy ion collision. It has a non-uniform energy density and temperature determined by the 'colliding nuclei and collision energy. The QGP then cools and expands as described by relativistic hydrodynamics, and as its temperature falls below 160 MeV, it experiences a crossover phase transition and hadronizes. This system continues to cool and expand, until at 95 GeV there is a thermal freeze-out. 
 
-The MIT Bag Model can be used to describe the QGP as a simple ideal gas with a bag constant $B$ that parameterizes the vacuum pressure \cite{Muller1993, Yagi:2005yb}.
 
-The QGP was initially thought to be a weakly coupled parton gas. This was based on asymptotic freedom from QCD; the highly energetic collisions such as those at the LHC would imply a weak interaction between the quarks and gluons that make up the plasma. This would result in rare scatterings between the constituents of the gas and wash out any spatial anisotropies based on the collision geometry. On the other hand, if the QGP is assumed to be strongly coupled, the pressure gradients in the medium would be driven by hydrodynamics and transform spatial anisotropies to momentum anisotropies in the particles produced as shown in Figure~\ref{fig:overlap}. In this picture, the non-uniform structure of the colliding nuclei would cause a momentum anisotropy that would be further enhanced when looking at collisions that are less central and do not have perfect overlap between the colliding nuclei \cite{116, 117, 118, 63}. Azimuthal correlation measurements \cite{Aad2014, PhysRevLett.87.182301, PhysRevLett.91.182301, PhysRevLett.98.242302,PhysRevC.89.044906,PhysRevLett.116.132302} indicate momentum anisotropy in the collision, implying that the medium is strongly coupled. 
 
+
+%The QGP can be further characterized by comparing quarkonia production in heavy ion and \pp\ collisions. 
+
+%Supposing that the interactions between quarks and gluons are negligible, their energy density can be written in terms of the temperature $T$ and quark chemical potential $\mu$ as:
+%
+%\begin{align}
+%\varepsilon_g &= \frac{16 \pi^2}{30} T^4 \\
+%\varepsilon_q+\varepsilon_{\bar{q}} &= 12 \left( \frac{7\pi^2}{120} T^4 + \frac{1}{4}\mu^2 T^2 + \frac{1}{8\pi^2} \mu^4 \right)
+%\end{align}
+%Then, the thermodynamical quantities of pressure $P$, entropy density $s$ and baryon number density $\rho_B$ are given by:
+%
+%\begin{align}
+%P = \frac{1}{3} \varepsilon, \qquad s = \left(\frac{\partial P}{\partial T}\right)_\mu, \qquad \rho_B = \frac{1}{3} \left( \frac{\partial P}{\partial \mu} \right)_T
+%\end{align}
+%
+%Using the framework of the MIT Bag Model and assuming the QGP as an ideal gas with a bag constant $\mathcal{B}$ that parameterizes the vacuum pressure \cite{Muller1993, Yagi:2005yb}, the equation of state of the QGP can be written as
+%
+%\begin{align}
+%\varepsilon &= \varepsilon_g(T, \mu) + \varepsilon_q(T, \mu) + \varepsilon_{\qbar} (T, \mu) + \mathcal{B} \\
+%P &= P_g(T, \mu) + P_q(T, \mu) + P_{\qbar} (T, \mu) - \mathcal{B}
+%\end{align}
+%
+%This model considers quarks and gluons to move freely inside a ``bag'' and postulates that a deconfined medium can be formed by compressing the bags together. Assuming a baryon free case with $\mu = 0$ and idealizing hadronic matter as a gas of non-interacting massless pions:
+%
+%\begin{align}
+%\varepsilon_\pi = \frac{3\pi^2}{30} T^4, \qquad P_\pi = \frac{1}{3} \varepsilon_\pi
+%\end{align}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+The QGP was initially thought to be a weakly coupled parton gas because of asymptotic freedom from QCD. The highly energetic collisions such as those at the LHC would imply a weak interaction between the quarks and gluons that make up the plasma. This would result in rare scatterings between the constituents of the gas and wash out any spatial anisotropies based on the collision geometry. On the other hand, a strong coupling within the QGP would result in the pressure gradients in the medium being driven by hydrodynamics and spatial anisotropies would be transformed to momentum anisotropies in the particles produced as shown in Figure~\ref{fig:overlap}. In this picture, the non-uniform structure of the colliding nuclei would cause a momentum anisotropy that would be further enhanced when looking at collisions that are less central and do not have perfect overlap between the colliding nuclei. These observations were seen in azimuthal correlation measurements implying that the medium is indeed strongly coupled \cite{Aaboud:2018ves, PhysRevLett.91.182301, Sirunyan:2017fts, PhysRevLett.116.132302}. 
 
 \begin{figure}[htbp]
 \begin{center}
@@ -156,23 +184,60 @@ The QGP was initially thought to be a weakly coupled parton gas. This was based 
 
 %At the peak energy density of the collision, the system cannot be described at the level of hadrons, and has to be described in terms of quarks and gluons. The initial anisotropic energy density being reflected in the azimuthal variation of particle production implies a strongly coupled medium that expands hydrodynamically, with a faster expansion in the direction of larger gradients and hence resulting a momentum anisotropy. 
 
-A Fourier Transform of the angular distribution of charged hadrons in the collision debris can quantify these momentum anisotropies and give the anisotropic flow coefficients $v_n$, defined as \cite{115}:
+A Fourier Transform of the angular distribution of charged hadrons in the collision debris can quantify these momentum anisotropies and give the anisotropic flow coefficients $v_n$, defined as \cite{Poskanzer:1998yz}:
 
 \begin{align}
-\frac{d\bar{N}}{d\phi} = \frac{\bar{N}}{2\pi} \left( 1 + 2 \sum_{n=1}^{\inf} v_{n} \cos(n(\phi-\bar{\Psi}_n)) \right)
+\frac{d\bar{N}}{d\phi} = \frac{\bar{N}}{2\pi} \left( 1 + 2 \sum_{n=1}^{\infty} v_{n} \cos(n(\phi-\bar{\Psi}_n)) \right)
 \end{align}
 
-where $\phi$ is the angle in the transverse plane, $\bar{\Psi}_n$ are the event plane angles, and $\bar{N}$ is the average number of particles per event. Some of these coefficients are shown in Figure~\ref{fig:flow_coeff}.
+where $\phi$ is the angle in the transverse plane, $\bar{\Psi}_n$ are the event plane angles, and $\bar{N}$ is the average number of particles per event. Some of these coefficients are shown in Figure~\ref{fig:flow_coeff}. The measured anisotropies can be used to constrain the specific viscosity given by the ratio of viscosity to entropy density, $\eta / s$, and have shown that the QGP has a $\eta / s$ of near the theoretical minimum of $1/4\pi$ \cite{Heinz:2013th}.
 
 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.65\textwidth]{figures/theory/flow_coefficients}
-\caption{Comparison of a hydrodynamic model from \cite{107} to the anisotropy measurements by ALICE \cite{108} for different parameterizations of the $\eta/s$ and for different $v_n (n = 2, 3, 4)$ from top to bottom as a function of collision centrality.  -- see ATLAS measurement from \cite{109}.}
+\caption{Comparison of a hydrodynamic model from \cite{Niemi:2015qia} to anisotropy measurements by ALICE \cite{ALICE:2011ab} for different parameterizations of $\eta / s $ and for different $v_n$, {\it{n}} = 2, 3, 4 from top to bottom, as a function of collision centrality.}
 \label{fig:flow_coeff}
 \end{center}
 \end{figure}
 
+The energy density of the QGP can be derived using \cite{PhysRevD.27.140}:
 
-Thermal photons from the QGP reveal that it reaches temperatures of 300--600 MeV in central collisions at 200 GeV \cite{PhysRevLett.104.132301} and 2.76 TeV \cite{2016235}, showing very little collision energy dependence. Further, the chemical freeze-out temperature was found to be 160 MeV via  measurements of ratios of final state hadrons \cite{Fodor_2004,ADAMS2005102, PhysRevC.93.024917} with the thermal freeze-out being 100--150 MeV \cite{PhysRevC.69.024904, PhysRevC.72.014908, PhysRevC.75.024910, PhysRevC.88.044910}.
+\begin{align}
+\varepsilon \geq \frac{d\Et/d\eta}{\tau_0 \pi R^2} = \frac{3}{2} \langle \Et/N \rangle \frac{d\Nch/d\eta}{\tau_0 \pi R^2}
+\end{align}
+
+where $d\Nch/d\eta$ is the number of charged particles produced per unity pseudorapidity, $d\Et/d\eta$ is the transverse energy per unit pseudorapidity, $\tau_0$ is the thermalization time, $R$ is the nuclear radius, and $\Et/N \approx 1$ GeV is the transverse energy per emitted particle. As shown in Figure~\ref{fig:energyDensity}, the energy density at the LHC was measured to be approximately 15 $\mathrm{GeV} / \mathrm{fm}^3$, much higher than the values measured at RHIC \cite{Adcox:2004mh, Krajcz_r_2011}.
+
+
+
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.65\textwidth]{figures/theory/energyDensity}
+\caption{$d\Nch/d\eta$ per colliding nucleon pair as a function of collision energy in \pp\ and nucleus-nucleus collisions \cite{Muller:2012zq}. }
+\label{fig:energyDensity}
+\end{center}
+\end{figure}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
