--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,4 +1,443 @@
 % !TEX root = thesis-ex.tex
+@article{Aaboud:2017wsi,
+      author         = "{ATLAS Collaboration}",
+      title          = "{Measurement of inclusive jet and dijet cross-sections in
+                        proton-proton collisions at $\sqrt{s}=13$ TeV with the
+                        ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "JHEP",
+      volume         = "05",
+      year           = "2018",
+      pages          = "195",
+      doi            = "10.1007/JHEP05(2018)195",
+      eprint         = "1711.02692",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2017-157",
+      SLACcitation   = "%%CITATION = ARXIV:1711.02692;%%"
+}
+
+
+@Article{Martin2009,
+author="Martin, A. D. and Stirling, W. J. and Thorne, R. S. and Watt, G.",
+title="Parton distributions for the LHC",
+journal="The European Physical Journal C",
+year="2009",
+month="Sep",
+day="01",
+volume="63",
+number="2",
+pages="189--285",
+issn="1434-6052",
+doi="10.1140/epjc/s10052-009-1072-5",
+url="https://doi.org/10.1140/epjc/s10052-009-1072-5"
+}
+
+
+
+@article{Dokshitzer:1977sg,
+      author         = "Dokshitzer, Yuri L.",
+      title          = "{Calculation of the Structure Functions for Deep
+                        Inelastic Scattering and e+ e- Annihilation by
+                        Perturbation Theory in Quantum Chromodynamics.}",
+      journal        = "Sov. Phys. JETP",
+      volume         = "46",
+      year           = "1977",
+      pages          = "641-653",
+      note           = "[Zh. Eksp. Teor. Fiz.73,1216(1977)]",
+      SLACcitation   = "%%CITATION = SPHJA,46,641;%%"
+}
+
+@article{Gribov:1972ri,
+      author         = "Gribov, V. N. and Lipatov, L. N.",
+      title          = "{Deep inelastic e p scattering in perturbation theory}",
+      journal        = "Sov. J. Nucl. Phys.",
+      volume         = "15",
+      year           = "1972",
+      pages          = "438-450",
+      note           = "[Yad. Fiz.15,781(1972)]",
+      reportNumber   = "IPTI-381-71",
+      SLACcitation   = "%%CITATION = SJNCA,15,438;%%"
+}
+
+@article{ALTARELLI1977298,
+title = "Asymptotic freedom in parton language",
+journal = "Nuclear Physics B",
+volume = "126",
+number = "2",
+pages = "298 - 318",
+year = "1977",
+issn = "0550-3213",
+doi = "https://doi.org/10.1016/0550-3213(77)90384-4",
+url = "http://www.sciencedirect.com/science/article/pii/0550321377903844",
+author = "G. Altarelli and G. Parisi",
+abstract = "A novel derivation of the Q2 dependence of quark and gluon densities (of given helicity) as predicted by quantum chromodynamics is presented. The main body of predictions of the theory for deep-inleastic scattering on either unpolarized or polarized targets is re-obtained by a method which only makes use of the simplest tree diagrams and is entirely phrased in parton language with no reference to the conventional operator formalism."
+}
+
+
+@article{PhysRevLett.39.1436,
+  title = {Jets from Quantum Chromodynamics},
+  author = {Sterman, George and Weinberg, Steven},
+  journal = {Phys. Rev. Lett.},
+  volume = {39},
+  issue = {23},
+  pages = {1436--1439},
+  numpages = {0},
+  year = {1977},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.39.1436},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.39.1436}
+}
+
+
+@article{Muller:2012zq,
+      author         = "Muller, Berndt and Schukraft, Jurgen and Wyslouch,
+                        Boleslaw",
+      title          = "{First Results from Pb+Pb collisions at the LHC}",
+      journal        = "Ann. Rev. Nucl. Part. Sci.",
+      volume         = "62",
+      year           = "2012",
+      pages          = "361-386",
+      doi            = "10.1146/annurev-nucl-102711-094910",
+      eprint         = "1202.3233",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-OPEN-2012-005",
+      SLACcitation   = "%%CITATION = ARXIV:1202.3233;%%"
+}
+
+@article{Adcox:2004mh,
+      author         = "Adcox, K. and others",
+      title          = "{Formation of dense partonic matter in relativistic
+                        nucleus-nucleus collisions at RHIC: Experimental
+                        evaluation by the PHENIX collaboration}",
+      collaboration  = "PHENIX",
+      journal        = "Nucl. Phys.",
+      volume         = "A757",
+      year           = "2005",
+      pages          = "184-283",
+      doi            = "10.1016/j.nuclphysa.2005.03.086",
+      eprint         = "nucl-ex/0410003",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/0410003;%%"
+}
+
+@article{Krajcz_r_2011,
+	doi = {10.1088/0954-3899/38/12/124041},
+	url = {https://doi.org/10.1088%2F0954-3899%2F38%2F12%2F124041},
+	year = 2011,
+	month = {nov},
+	publisher = {{IOP} Publishing},
+	volume = {38},
+	number = {12},
+	pages = {124041},
+	author = "{CMS Collaboration}",
+	title = {Charged hadron multiplicity and transverse energy densities in {PbPb} collisions from {CMS}},
+	journal = {Journal of Physics G: Nuclear and Particle Physics},
+}
+
+@article{PhysRevD.27.140,
+  title = {Highly relativistic nucleus-nucleus collisions: The central rapidity region},
+  author = {Bjorken, J. D.},
+  journal = {Phys. Rev. D},
+  volume = {27},
+  issue = {1},
+  pages = {140--151},
+  numpages = {0},
+  year = {1983},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.27.140},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.27.140}
+}
+
+
+@article{Heinz:2013th,
+      author         = "Heinz, Ulrich and Snellings, Raimond",
+      title          = "{Collective flow and viscosity in relativistic heavy-ion
+                        collisions}",
+      journal        = "Ann. Rev. Nucl. Part. Sci.",
+      volume         = "63",
+      year           = "2013",
+      pages          = "123-151",
+      doi            = "10.1146/annurev-nucl-102212-170540",
+      eprint         = "1301.2826",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1301.2826;%%"
+}
+
+@article{Sirunyan:2017fts,
+      author         = "{CMS Collaboration}",
+      title          = "{Non-Gaussian elliptic-flow fluctuations in PbPb
+                        collisions at \sqrtsnn = 5.02 TeV}",
+      collaboration  = "CMS",
+      journal        = "Phys. Lett.",
+      volume         = "B789",
+      year           = "2019",
+      pages          = "643-665",
+      doi            = "10.1016/j.physletb.2018.11.063",
+      eprint         = "1711.05594",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CMS-HIN-16-019, CERN-EP-2017-268",
+      SLACcitation   = "%%CITATION = ARXIV:1711.05594;%%"
+}
+
+@article{Poskanzer:1998yz,
+      author         = "Poskanzer, Arthur M. and Voloshin, S. A.",
+      title          = "{Methods for analyzing anisotropic flow in relativistic
+                        nuclear collisions}",
+      journal        = "Phys. Rev.",
+      volume         = "C58",
+      year           = "1998",
+      pages          = "1671-1678",
+      doi            = "10.1103/PhysRevC.58.1671",
+      eprint         = "nucl-ex/9805001",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/9805001;%%"
+}
+
+@Article{Khachatryan2016,
+author="{The CMS collaboration}",
+title="{Measurement of transverse momentum relative to dijet systems in PbPb and pp collisions at \sqrtsnn = 2.76 TeV}",
+journal="Journal of High Energy Physics",
+year="2016",
+month="Jan",
+day="04",
+volume="2016",
+number="1",
+pages="6",
+issn="1029-8479",
+doi="10.1007/JHEP01(2016)006",
+url="https://doi.org/10.1007/JHEP01(2016)006"
+}
+
+
+
+@article{ATLAS:2017wvp,
+      author         = "The ATLAS collaboration",
+      title          = "{Study of inclusive jet yields in Pb+Pb collisions at
+                        $\sqrt{s_{N N}} = 5.02$ TeV}",
+      collaboration  = "ATLAS",
+      year           = "2017",
+      reportNumber   = "ATLAS-CONF-2017-009",
+      SLACcitation   = "%%CITATION = ATLAS-CONF-2017-009;%%"
+}
+
+@article{2012176,
+title = "Jet momentum dependence of jet quenching in PbPb collisions at sNN=2.76 TeV",
+journal = "Physics Letters B",
+volume = "712",
+number = "3",
+pages = "176 - 197",
+year = "2012",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/j.physletb.2012.04.058",
+url = "http://www.sciencedirect.com/science/article/pii/S037026931200487X",
+author = "{CMS Collaboration}",
+keywords = "CMS, Physics, Heavy ion, Jet",
+}
+
+@article{Sjostrand:2007gs,
+      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{A Brief Introduction to PYTHIA 8.1}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "178",
+      year           = "2008",
+      pages          = "852-867",
+      doi            = "10.1016/j.cpc.2008.01.036",
+      eprint         = "0710.3820",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-LCGAPP-2007-04, LU-TP-07-28,
+                        FERMILAB-PUB-07-512-CD-T",
+      SLACcitation   = "%%CITATION = ARXIV:0710.3820;%%"
+}
+
+@article{Aad:2013xma,
+      author         = "{ATLAS Collaboration}",
+      title          = "{Measurement of the distributions of event-by-event flow
+                        harmonics in lead-lead collisions at = 2.76 TeV with the
+                        ATLAS detector at the LHC}",
+      collaboration  = "ATLAS",
+      journal        = "JHEP",
+      volume         = "11",
+      year           = "2013",
+      pages          = "183",
+      doi            = "10.1007/JHEP11(2013)183",
+      eprint         = "1305.2942",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-04",
+      SLACcitation   = "%%CITATION = ARXIV:1305.2942;%%"
+}
+
+@article{ALICE:2011ab,
+      author         = "{ALICE Collaboration}",
+      title          = "{Higher harmonic anisotropic flow measurements of charged
+                        particles in Pb-Pb collisions at $\sqrt{s_{NN}}$=2.76 TeV}",
+      collaboration  = "ALICE",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "107",
+      year           = "2011",
+      pages          = "032301",
+      doi            = "10.1103/PhysRevLett.107.032301",
+      eprint         = "1105.3865",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CERN-PH-EP-2011-073",
+      SLACcitation   = "%%CITATION = ARXIV:1105.3865;%%"
+}
+
+@article{Niemi:2015qia,
+      author         = "Niemi, H. and Eskola, K. J. and Paatelainen, R.",
+      title          = "{Event-by-event fluctuations in a perturbative QCD +
+                        saturation + hydrodynamics model: Determining QCD matter
+                        shear viscosity in ultrarelativistic heavy-ion
+                        collisions}",
+      journal        = "Phys. Rev.",
+      volume         = "C93",
+      year           = "2016",
+      number         = "2",
+      pages          = "024907",
+      doi            = "10.1103/PhysRevC.93.024907",
+      eprint         = "1505.02677",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1505.02677;%%"
+}
+
+@article{Ackermann:2000tr,
+      author         = "{STAR Collaboration}",
+      title          = "{Elliptic flow in Au + Au collisions at$\sqrt{s_{NN}}$ = 130 GeV}",
+      collaboration  = "STAR",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "86",
+      year           = "2001",
+      pages          = "402-407",
+      doi            = "10.1103/PhysRevLett.86.402",
+      eprint         = "nucl-ex/0009011",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/0009011;%%"
+}
+
+@article{Foka:2016vta,
+      author         = "Foka, Panagiota and Janik, Małgorzata Anna",
+      title          = "{An overview of experimental results from
+                        ultra-relativistic heavy-ion collisions at the CERN LHC:
+                        Bulk properties and dynamical evolution}",
+      journal        = "Rev. Phys.",
+      volume         = "1",
+      year           = "2016",
+      pages          = "154-171",
+      doi            = "10.1016/j.revip.2016.11.002",
+      eprint         = "1702.07233",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1702.07233;%%"
+}
+
+@article{Chatrchyan:2013kba, 
+      author         = "{CMS Collaboration}",
+      title          = "{Measurement of higher-order harmonic azimuthal
+                        anisotropy in PbPb collisions at $\sqrt{s_{NN}}$ = 2.76
+                        TeV}",
+      collaboration  = "CMS",
+      journal        = "Phys. Rev.",
+      volume         = "C89",
+      year           = "2014",
+      number         = "4",
+      pages          = "044906",
+      doi            = "10.1103/PhysRevC.89.044906",
+      eprint         = "1310.8651",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CMS-HIN-11-005, CERN-PH-EP-2013-196",
+      SLACcitation   = "%%CITATION = ARXIV:1310.8651;%%"
+}
+
+@article{Adams:2003am, 
+      author         = "{STAR Collaboration}",
+      title          = "{Particle type dependence of azimuthal anisotropy and
+                        nuclear modification of particle production in Au + Au
+                        collisions at $\sqrt{s_{NN}}$ = 200-GeV}",
+      collaboration  = "STAR",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "92",
+      year           = "2004",
+      pages          = "052302",
+      doi            = "10.1103/PhysRevLett.92.052302",
+      eprint         = "nucl-ex/0306007",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/0306007;%%"
+}
+
+@article{Ollitrault:2009ie,
+      author         = "Ollitrault, Jean-Yves and Poskanzer, Arthur M. and
+                        Voloshin, Sergei A.",
+      title          = "{Effect of flow fluctuations and nonflow on elliptic flow
+                        methods}",
+      journal        = "Phys. Rev.",
+      volume         = "C80",
+      year           = "2009",
+      pages          = "014904",
+      doi            = "10.1103/PhysRevC.80.014904",
+      eprint         = "0904.2315",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:0904.2315;%%"
+}
+
+@article{PhysRevLett.34.1353,
+  title = {Superdense Matter: Neutrons or Asymptotically Free Quarks?},
+  author = {Collins, J. C. and Perry, M. J.},
+  journal = {Phys. Rev. Lett.},
+  volume = {34},
+  issue = {21},
+  pages = {1353--1356},
+  numpages = {0},
+  year = {1975},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.34.1353},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.34.1353}
+}
+
+
+@article{Linde_1979,
+	doi = {10.1088/0034-4885/42/3/001},
+	url = {https://doi.org/10.1088%2F0034-4885%2F42%2F3%2F001},
+	year = 1979,
+	month = {mar},
+	publisher = {{IOP} Publishing},
+	volume = {42},
+	number = {3},
+	pages = {389--437},
+	author = {A D Linde},
+	title = {Phase transitions in gauge theories and cosmology},
+	journal = {Reports on Progress in Physics},
+}
+	
+	
+@phdthesis{vanderSchee:2014qwa,
+      author         = "van der Schee, Wilke",
+      title          = "{Gravitational collisions and the quark-gluon plasma}",
+      school         = "Utrecht U.",
+      year           = "2014",
+      url            = "http://dspace.library.uu.nl/handle/1874/294809",
+      eprint         = "1407.1849",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:1407.1849;%%"
+}
+
 @techreport{Perepelitsa:2212936,
       author        = "{ATLAS Collaboration}",
       title         = "{Centrality determination in $\sqrt{s_\mathrm{NN}} = 5.02$
@@ -200,6 +639,25 @@ eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.90.024908}
 }
 
+
+@article{Aaboud:2018ves,
+      author         = "Aaboud, Morad and others",
+      title          = "{Measurement of the azimuthal anisotropy of charged
+                        particles produced in $\sqrt{s_{_\text {NN}}}$ = 5.02 TeV
+                        Pb+Pb collisions with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C78",
+      year           = "2018",
+      number         = "12",
+      pages          = "997",
+      doi            = "10.1140/epjc/s10052-018-6468-7",
+      eprint         = "1808.03951",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CERN-EP-2018-194",
+      SLACcitation   = "%%CITATION = ARXIV:1808.03951;%%"
+}
 
 @Article{Aad2014, 
 author="{ATLAS Collaboration}",
